<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:background="@drawable/background_image"
        tools:context=".After_Services_Activity">

        <include
            android:id="@+id/include2"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="After services"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/font_10_bolt_sithum"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="97dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="@string/text_descript"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <TextView
            android:id="@+id/textView13"
            android:layout_width="366dp"
            android:layout_height="82dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_adjust_24"
            android:text="@string/text_one"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="366dp"
            android:layout_height="82dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_adjust_24"
            android:text="@string/text_two"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="372dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_adjust_24"
            android:text="@string/txt_introThree"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:layout_width="372dp"
        android:layout_height="82dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_baseline_adjust_24"
        android:text="@string/txt_four"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:layout_width="216dp"
        android:layout_height="166dp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintVertical_bias="0.611"
        app:srcCompat="@drawable/after_serverice" />

</androidx.constraintlayout.widget.ConstraintLayout>