<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/background_image"
        tools:context=".Delivery_Service_Activity">

        <include
            android:id="@+id/include7"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="Delivery Service"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/font_10_bolt_sithum"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="154dp"
            android:layout_height="145dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView48"
            app:srcCompat="@drawable/flexibility" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_001"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="136dp"
            android:layout_height="36dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_003"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_payment"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="154dp"
        android:layout_height="69dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_002"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="135dp"
            android:layout_height="141dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView48"
            app:srcCompat="@drawable/online_track" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="159dp"
            android:layout_height="126dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            app:srcCompat="@drawable/express" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="139dp"
        android:layout_height="127dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:srcCompat="@drawable/reliable" />

    <Button
        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/btn_01"
            android:fontFamily="@font/font_10_bolt_sithum"
            android:textAllCaps="false"
            app:cornerRadius="45dp"
            app:backgroundTint="@color/myColor10"
        android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="359dp"
            android:layout_height="95dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_10_bolt_sithum"
            android:text="@string/txt22"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include7" />

    </androidx.constraintlayout.widget.ConstraintLayout>