<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".Contact_Page_Activity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="Contact us"

        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="341dp"
        android:layout_height="237dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/contactus" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="@string/txt_Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="@string/txt_vlue"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="@string/txt_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txt_fld_1"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        app:boxStrokeColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Enter your email"
        android:textColorHint="@color/black"
        app:boxStrokeColor="#000000"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/txt_eterMessage"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        app:boxStrokeColor="#000000"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="56dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_submitDetaisl"
        app:backgroundTint="@color/myColor9"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>