<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Calculator_Page_Activity">

<include layout="@layout/toolbar" />

<TextView
    android:id="@+id/textView30"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/txt_cal"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:fontFamily="@font/font_10_bolt_sithum"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView28"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:fontFamily="@font/font_10_bolt_sithum"
    android:text="What is solar calculator?"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.088"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView30" />

<TextView
    android:id="@+id/textView29"
    android:layout_width="315dp"
    android:layout_height="283dp"
    android:layout_marginTop="24dp"
    android:text="@string/text_04"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.375"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="320dp"
        android:layout_height="205dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:srcCompat="@drawable/calculator" />

    <Button
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:textColor="@color/black"
        android:text="@string/btn_cal"
        android:textStyle="bold"
        app:backgroundTint="@color/myColor10"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

</androidx.constraintlayout.widget.ConstraintLayout>