<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="10dp"
android:paddingRight="10dp"
android:paddingBottom="5dp"
android:paddingTop="5dp"
android:background="#ffffff"
android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="402dp"
        android:layout_height="356dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="146dp"
            android:layout_height="128dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/inverter" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_inverter"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="39dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView15"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="39dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="39dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView20"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="39dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <ImageView
            android:id="@+id/img99"
            android:layout_width="56dp"
            android:layout_height="46dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/txt_brand"
            android:textColor="@color/myColor1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="189dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/txt_price"
            android:textColor="@color/myColor7"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="143dp"
            android:layout_height="31dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="Status"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="96dp"
            android:layout_height="39dp"
            android:text="@string/btn_submitDetaisl"
            app:backgroundTint="@color/myColor9"
            app:cornerRadius="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>