<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".Service_page_Activity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_10_bolt_sithum"
        android:text="Services"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/btn_aftServices"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/myColor10"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="Our warranty"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/myColor10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/btn_delevery"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/myColor10"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/btn_units"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/myColor10"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="337dp"
        android:layout_height="181dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/contact" />

    <Button
        android:id="@+id/button9"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="Contact Us"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/myColor10"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>